# clip-qrcode-share-gnome

./: README.md  _clang-format  meson.build  org.eexpss.Clip_Qrcode_Share.json
data/: meson.build  org.eexpss.Clip_Qrcode_Share.appdata.xml.in  org.eexpss.Clip_Qrcode_Share.desktop.in  org.eexpss.Clip_Qrcode_Share.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  clip_qrcode_share.gresource.xml  main.vala  meson.build  window.ui  window.vala
